--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
 
 
-  </style>
+
 </head>
 <body>
   <header>
@@ -38,17 +38,17 @@
   </p>
   <button class="started-btn" type="button" name="button">Get Started</button>
 
+</div>
+
+
+<div class="flex">
   <div class="card">
     <img src="images/icon-access-anywhere.svg" alt="">
     <h2>Access your files, anywhere</h2>
     <p>The ability to use a smartphone, tablet, or computer to access your account means your
       files follow you everywhere.</p>
     </div>
-  </div>
-
-
-
-<div id="features" class="card">
+  <div id="features" class="card">
   <img id="security"src="images/icon-security.svg" alt="">
   <h2>Security you can trust</h2>
   <p>2-factor authentication and user-controlled encryption are just a couple of the security
@@ -66,24 +66,30 @@
   <p>Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all
   file types to be securely stored and shared.</p>
 </div>
+</div>
 
 <div class="productive-div">
 
 
   <img class="productive"src="images/illustration-stay-productive.png" alt="">
 
+<div class="right-div">
   <h2>Stay productive, wherever you are</h2>
-
   <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file
-  storage needs.</p>
-
-  <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email
-  attachments required.</p>
+    storage needs.</p>
+    <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email
+      attachments required.</p>
+      <a class="works"href="#">See how Fylo works</a>
+      <img class="arrow"src="images/icon-arrow.svg" alt="">
+      <hr>
+    </div>
   </div>
 
-  <a class="works"href="#">See how Fylo works</a>
-  <img class="arrow"src="images/icon-arrow.svg" alt="">
-  <hr>
+
+
+
+
+<div class="test-div">
 
 
 <div class="testimonials">
@@ -112,47 +118,61 @@
   <h4>Founder & CEO, Huddle</h4>
 </div>
 
+</div>
+
 
 
   <div class="cta">
     <h2>Get early access today</h2>
   <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
   questions, our support team would be happy to help you.</p>
+<div class="buttons">
 <button id="email"class="email-btn" type="email" name="button">email.example.com</button>
 <button class="started-btn"type="button" name="button">Get Started For Free</button>
 </div>
+</div>
 </main>
 
+<img class="bottom-logo"src="images/logo.svg" alt="">
 
   <footer>
-    <img class="bottom-logo"src="images/logo.svg" alt="">
-    <div class="grid">
-      <p class="location">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-    dolore magna aliqua</p>
-    <img class="location-icon"src="images/icon-location.svg" alt="">
-    <img class="phone-icon"src="images/icon-phone.svg" alt="">
-    <img class="email-icon"src= "images/icon-email.svg" alt="">
-    <span class="phone">+1-543-123-4567</span>
-    <span class="email">example@fylo.com</span>
+    <div class="grid footer-flex">
+      <span class="location"><img id="location-icon"src="images/icon-location.svg" alt="">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+      dolore magna aliqua</span>
+    <div class="phone-email">
+      <span class=""><img class="phone-icon"src="images/icon-phone.svg" alt="">
++1-543-123-4567</span>
+      <span class=""><img class="email-icon"src= "images/icon-email.svg" alt="">
+example@fylo.com</span>
     </div>
+  </div>
+
+
+    <div class="about-flex">
     <ul class="about">
      <li>About Us</li>
      <li>Jobs</li>
      <li>Press</li>
      <li>Blog</li>
     </ul>
-
-    <ul class=" contact about">
+    <ul class="contact-about">
       <li>Contact Us</li>
       <li>Terms</li>
       <li>Privacy</li>
     </ul>
-    </footer>
+    </div>
     <div class="social-icons">
   <ion-icon name="logo-facebook"></ion-icon>
   <ion-icon name="logo-twitter"></ion-icon>
   <ion-icon name="logo-instagram"></ion-icon>
 </div>
+
+    </footer>
+
+
+
+
 
 
 
